[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Items/player-weapon.png" type="Texture" id=1]
[ext_resource path="res://Script/Scythe.gd" type="Script" id=2]
[ext_resource path="res://Scene/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Items/Skill_scythe.png" type="Texture" id=4]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=5]
[ext_resource path="res://Script/HitBoxPlayer.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.58617, 39.6044 )

[sub_resource type="CircleShape2D" id=12]
radius = 100.936

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -111.774, -232.423, -274.195, -312.844, 16.7036, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.8, 1.8 ), Vector2( 1.9, 1.9 ), Vector2( 2, 2 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skill_scythe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/HitBox/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Combo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -111.774, -232.423, -274.195, -312.844, 16.7036, 58.0882, -139.375, -325.982, -520.605, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.8, 1.8 ), Vector2( 1.9, 1.9 ), Vector2( 2, 2 ), Vector2( 2.2, 2.2 ), Vector2( 2.4, 2.4 ), Vector2( 2.5, 2.5 ), Vector2( 2.7, 2.7 ), Vector2( 2.9, 2.9 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skill_scythe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/HitBox/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -111.774, -232.423, -274.195, -312.844, 16.7036, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.4, 1.4 ), Vector2( 1.6, 1.6 ), Vector2( 1.8, 1.8 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot/HitBox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/HitBox/CollisionShape2D2:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16.1678, 32.4489, 40.0877, 47.3816, 61.8392, 65.076, 77.7512, 64.3897, 10.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skill_scythe:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7, 6, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Skill_scythe:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimationPlayer:playback_speed")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.7, 0.5, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "teleport"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 0.4 ), Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 42.6344, 2.52269 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/Font_Textur/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[node name="Scythe" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="scythe" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Skill_scythe" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5.28299, 7.8694 )
rotation = 0.802957
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 18.1924, -13.775, 15.297, -15.8909, 12.6243, -17.45, 11.0652, -18.1181, 8.94933, -19.009, 6.61072, -19.6772, 3.93803, -20.1227, -11.2073, -19.8999, -17.889, -17.45, -19.7822, -16.5591, -17.4435, -21.3476, -14.8822, -23.5749, -11.3409, -26.4503, -4.26941, -29.7355, 4.82892, -31.7043, 12.6243, -31.0362, 17.747, -29.143, 22.3128, -26.693, 26.7673, -23.0181, 28.3264, -21.0136, 32.0552, -21.0436, 32.0552, -17.8938, 22.1317, -9.06646 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Combo = SubResource( 4 )
anims/Skill_1 = SubResource( 5 )
anims/teleport = SubResource( 6 )

[node name="HitBoxPivot" type="Position2D" parent="."]

[node name="HitBox" parent="HitBoxPivot" instance=ExtResource( 3 )]
collision_mask = 8
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBoxPivot/HitBox"]
visible = false
polygon = PoolVector2Array( 19.3514, -12.8527, 12.8623, -17.4541, 6.13715, -19.9317, 0.119946, -20.8756, -12.1504, -20.5216, -22.0611, -14.8584, -13.2123, -25.359, -8.13895, -28.3086, -1.41385, -30.9043, 3.77746, -31.7302, 10.3846, -31.7302, 19.3514, -28.8985, 28.4362, -21.9375, 32.2117, -21.8195, 33.1556, -17.69, 23.2449, -8.95919 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxPivot/HitBox"]
visible = false
shape = SubResource( 7 )
disabled = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HitBoxPivot/HitBox"]
visible = false
position = Vector2( 5.37557, 7.06972 )
rotation = 0.789045
shape = SubResource( 8 )

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = -13.0689
margin_top = -14.6658
margin_right = -5.06893
margin_bottom = 1.33415
rect_scale = Vector2( 1.7, 1.7 )
custom_fonts/font = SubResource( 10 )
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Label"]
position = Vector2( 2.78315, 6.41659 )
scale = Vector2( 0.0738933, 0.0901693 )
texture = ExtResource( 5 )
texture_scale = 0.4
color = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
